test/files/neg/t2488.check
t2488.scala:7: error: overloaded method value f with alternatives:
  ()Int <and>
  (a: Int,b: Int)Int
 cannot be applied to (b: Int, Int)
  println(c.f(b = 2, 2))
            ^
t2488.scala:8: error: overloaded method value f with alternatives:
  ()Int <and>
  (a: Int,b: Int)Int
 cannot be applied to (a: Int, c: Int)
  println(c.f(a = 2, c = 2))
            ^
t2488.scala:9: error: overloaded method value f with alternatives:
  ()Int <and>
  (a: Int,b: Int)Int
 cannot be applied to (Int, c: Int)
  println(c.f(2, c = 2))
            ^
t2488.scala:10: error: overloaded method value f with alternatives:
  ()Int <and>
  (a: Int,b: Int)Int
 cannot be applied to (c: Int, Int)
  println(c.f(c = 2, 2))
            ^
t2488.scala:11: error: overloaded method value f with alternatives:
  ()Int <and>
  (a: Int,b: Int)Int
 cannot be applied to (Int)
  println(c.f(2))
            ^
5 errors found
